--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/renanpilotti/to-do-list-react",
+  "homepage": "to-do-list/",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
