--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "to-do-list/",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://renanpilotti.github.io/to-do-list-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
